Fix word wrapping

--- a/www/awcy.css
+++ b/www/awcy.css
@@ -54,4 +54,5 @@ header {
     border: 1px solid #ccc;
     margin: 5px;
     border-radius: 3px;
+    word-wrap: break-word;
 }
